# ScriptSpliter

./: .gitignore  APPLICATION_READY.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  TEST_SUMMARY.md  examples.py  functional_tests.py  make.bat  make.ps1  pyproject.toml  requirements.txt  run_all_tests.py  run_tests.sh  sample.js  setup.py  simple_test.py  test_runner.py  tests.py  verify_app.py
script_spliter/: __init__.py  analyzer.py  cli.py  config.py  generator.py  parser.py  spliter.py
